--- a/Robotics/Pybullet_Workspace/examples/constraint_example.ipynb
+++ b/Robotics/Pybullet_Workspace/examples/constraint_example.ipynb
@@ -9,32 +9,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "(0, b'base_to_right_leg', 4, -1, -1, 0, 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, b'right_leg', (0.0, 0.0, 0.0), (0.2199999988079071, 0.0, 0.25), (0.0, -0.7070904013270762, 0.0, 0.7071231606665944), -1)\n"
+      "1\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "import pybullet as p\n",
     "import time\n",
+    "import math\n",
+    "\n",
     "import pybullet_data\n",
-    "physicsClient = p.connect(p.GUI)#or p.DIRECT for non-graphical version\n",
+    "\n",
+    "\n",
+    "p.connect(p.GUI)\n",
     "p.setAdditionalSearchPath(pybullet_data.getDataPath()) #optionally\n",
+    "\n",
+    "p.loadURDF(\"plane.urdf\")\n",
+    "cubeId = p.loadURDF(\"cube_small.urdf\",0,0,1)\n",
     "p.setGravity(0,0,-10)\n",
-    "planeId = p.loadURDF(\"plane.urdf\")\n",
-    "cubeStartPos = [0,0,1]\n",
-    "cubeStartOrientation = p.getQuaternionFromEuler([0,0,0])\n",
-    "boxId = p.loadURDF(\"r2d2.urdf\",cubeStartPos, cubeStartOrientation)\n",
+    "p.setRealTimeSimulation(1)\n",
+    "cid = p.createConstraint(cubeId,-1,-1,-1,p.JOINT_FIXED,[0,0,0],[0,0,0],[0,0,1])\n",
+    "print (cid)\n",
+    "print (p.getConstraintUniqueId(0))\n",
+    "prev=[0,0,1]\n",
+    "a=-math.pi\n",
+    "while 1:\n",
+    "\ta=a+0.01\n",
+    "\tif (a>math.pi):\n",
+    "\t\ta=-math.pi\n",
+    "\ttime.sleep(.01)\n",
+    "\tp.setGravity(0,0,-10)\n",
+    "\tpivot=[a,0,1]\n",
+    "\torn = p.getQuaternionFromEuler([a,0,0])\n",
+    "\tp.changeConstraint(cid,pivot,jointChildFrameOrientation=orn, maxForce=50)\n",
     "\n",
-    "print(p.getNumJoints(boxId))\n",
-    "print(p.getJointInfo(boxId, 0))\n",
-    "\n",
-    "for i in range (10000):\n",
-    "    p.stepSimulation()\n",
-    "    time.sleep(1./240.)\n",
-    "cubePos, cubeOrn = p.getBasePositionAndOrientation(boxId)\n",
-    "print(cubePos,cubeOrn)\n",
-    "p.disconnect()"
+    "p.removeConstraint(cid)"
    ]
   },
   {
